syntax = "proto3";
package alliance;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/terra-money/alliance/x/alliance/types";

// UnbondingDelegation defines an unbonding object with relevant metadata.
message UnbondingDelegation {
    option (gogoproto.equal)            = true;
    
    // completion_time is the unix time for unbonding completion.
    google.protobuf.Timestamp completion_time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
    // validator_address is the bech32-encoded address of the validator.
    string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
    // amount defines the tokens to receive at completion.
    string amount = 3 [
      (cosmos_proto.scalar)  = "cosmos.Int",
      (gogoproto.customtype) = "cosmossdk.io/math.Int",
      (gogoproto.nullable)   = false
    ];
}